# collect-anything-app

./: .dockerignore  .env.example  .gitignore  CONTAINERIZATION.md  DOCKER.md  Makefile  PRD.md  README.md  TROUBLESHOOTING.md  docker-compose.built.yml  docker-compose.dev.yml  docker-compose.override.yml.example  docker-compose.yml  setup-docker.ps1  setup-docker.sh  users-view.csv
.github/: copilot-instructions.md
.github/workflows/: docker.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  auth_utils.py  database.py  debug_auth.py  healthcheck.py  main.py  models.py  pyproject.toml  test_auth.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_add_views.py  0003_change_json_to_jsonb.py  0004_add_gin_index_submission_data.py  0005_add_form_description.py  b5afd7a27220_add_views.py
backend/routers/: auth.py  forms.py  projects.py  views.py
backend/scripts/: backfill_reference_field_ids.py  debug_import_main.py  migrate_field_key_rename_to_id.py  repro_signup.py
docs/: field-types-roadmap.md
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  docker-entrypoint.sh  middleware.ts  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: Features.tsx  Footer.tsx  FormSuccessScreen.tsx  GlobalHeader.tsx  HeaderRenderer.tsx  LandingHero.tsx  LoginForm.tsx  PublicFormRenderer.tsx  SidebarToggle.tsx  SignupForm.tsx  ThemeToggle.tsx
frontend/lib/: config.ts
frontend/public/: runtime-config.js
scripts/: kill_port_3000.ps1
(+98 files in other folders)
